- Added support for reports in the [gravityflow] shortcode.
- Added security enhancements.
- Added support for the GP eCommerce Fields on the User Input Step.
- Added support for the Gravity Forms EmailOctopus Add-On.
- Added support for Gravity Forms conditional shortcode within Outgoing webhook raw body requests.
- Added filter gravityflow_send_to_step_condition_met_required to allow customization of the API send_to_step when the proposed steps conditions are not met. Default is false that API will always send to the proposed step.
- Added filter gravityflow_send_to_step_condition_not_met to allow customization of the API when the proposed next step has not met its step conditions. Defaults to next step after the proposed step.
- Added setting to allow the reports shortcode.
- Added workflow note when the Update User step is completed.
- Updated Outgoing Webhook settings to allow GET requests to include request body.
- Updated gravityflow_print_styles filter to include 2nd parameter of entry IDs.
- Fixed an issue with the User Input Step where editable Total, Coupon, Subtotal, Tax, or Discount fields required all other pricing fields to be editable to function correctly.
- Fixed an issue with the User Input Step where the existing Coupon field value is not restored. Requires Coupons Add-On v2.9.2 or greater.
- Fixed an issue with the User Input Step where the Coupon usage count is not updated.
- Fixed a PHP notice which occurs when the shortcode is processed and WordPress isn't able to provide the current post object.
- Fixed a PHP warning on the inbox page when a step is configured with a delay based due date and the offset setting contains non-numeric characters.
- Fixed notices with PHP 7.4.
- Fixed an issue where the Dropbox step does not complete with Dropbox Add-On 2.4.1+.
- Fixed an issue where the report data for assignees by month is incorrect.