@@ -709,9 +709,8 @@ PRIMARY KEY  (id)
 					'version' => $this->_version,
 					'deps'    => array( 'jquery', 'sack' ),
 					'enqueue' => array(
-						array(
-							'query' => 'page=gravityflow-inbox',
-						),
+						array( 'query' => 'page=gravityflow-inbox', ),
+						array( 'query' => 'page=gf_entries', ),
 					),
 				),
 				array(
@@ -758,6 +757,8 @@ PRIMARY KEY  (id)
 					),
 				),
 			);
+
+			$magic = true;
 
 			return array_merge( parent::scripts(), $scripts );
 		}
