@@ -17,3 +17,4 @@
 - Fixed notices with PHP 7.4.
 - Fixed an issue where the Dropbox step does not complete with Dropbox Add-On 2.4.1+.
 - Fixed an issue where the report data for assignees by month is incorrect.
+- Fixed an issue where the Discussion Field view more/less effect would not operate on the Form > Entries screen (both view and edit).
